--- a/documents/Justice Code/index.html
+++ b/documents/Justice Code/index.html
@@ -12,28 +12,22 @@
 <body>
 
 
+<h1>hey</h1>
+
 <div ng-app="" ng-controller="customersController">
-
-<div>
- 
-  <br>
-  <input type="text" ng-model="name" /> {{ name }}
-  <br>
-  
-  <ul>
-    <li ng-repeat="cust in customers | filter:name | orderBy:'city'">{{ cust.Name }} - {{cust.City}}</li>
-  </ul>
-  
-  
-</div>
-  
+	<div>
+	  <br>
+	  <input type="text" ng-model="name" /> {{ name }}
+	  <br>
+	  
+	  <ul>
+	    <li ng-repeat="cust in customers | filter:name ">Voted: {{ cust.Vote }} | City: {{cust.City}} | Country: {{cust.Country}}</li>
+	  </ul>
+	</div>
 </div>
 
-
-
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
-
-  <script src="index.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
+<script src="index.js"></script>
 
 </body>
 
